# FerrOS-user

./: .gitignore  README.md
cat/: Cargo.toml
cat/src/: main.rs
clock/: Cargo.toml
clock/src/: main.rs
echo/: Cargo.toml
echo/src/: main.rs
ferr_shell/: Cargo.toml  Makefile  README.md  lexer.frl  parser.sam
ferr_shell/src/: command.rs  lexer.rs  main.rs  parser.rs  remove_variables.rs
ferr_shell/src/compute/: command.rs  lexer.rs  mod.rs  parser.rs
ferr_shell/src/compute/build_tree/: command.rs  mod.rs
grep/: Cargo.toml
grep/src/: main.rs
hexdump/: Cargo.toml
hexdump/src/: main.rs
issou/: Cargo.toml  x86_64-ferros.json
issou/src/: main.rs
launcher/: Cargo.toml
launcher/src/: main.rs
lisp/: .gitignore  Cargo.toml  Makefile  lisp
lisp/src/: main.rs  parser.rs  syscall.rs
music/: Cargo.toml  Makefile
music/src/: main.rs
neofetch/: Cargo.toml  Makefile
neofetch/src/: main.rs
snake/: Cargo.toml
snake/src/: main.rs
snake/src/action/: mod.rs
snake/src/direction/: mod.rs
snake/src/errors/: mod.rs
snake/src/game/: mod.rs
snake/src/point_generator/: mod.rs
snake/src/snake/: mod.rs
snake/src/state/: mod.rs
test_io/: Cargo.toml  Makefile  test_io
test_io/.cargo/: config.toml
test_io/src/: main.rs
test_io/src/allocator/: linked_list.rs  mod.rs
test_io2/: Cargo.toml
test_io2/src/: main.rs
test_listen/: Cargo.toml
test_listen/src/: main.rs
test_open_text/: Cargo.toml
test_open_text/src/: main.rs  serial.rs
top/: Cargo.toml
top/src/: main.rs
