[package]
name = "clock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferr_os_librust = { git = "https://github.com/Sup3Legacy/FerrOS-librust" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
