[package]
name = "ferr_shell"
version = "0.1.0"
authors = ["Gabriel DORIATH DÖHLER <gabriel.doriath.dohler@ens.psl.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferr_os_librust = { git = "https://github.com/Sup3Legacy/FerrOS-librust" }
x86_64="*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

