[package]
name = "snake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferr_os_librust = {git = "https://github.com/Sup3Legacy/FerrOS-librust"}

[dependencies.rand]
version = "0.8.3"
features = ["alloc", "nightly", "small_rng"]
default-features = false

[profile.dev]
panic = "abort"
overflow-checks = true
debug = false

[profile.release]
panic = "abort"
